Issue #173 Enhancement  - Securiteinfo.com support removed from unofficial-sigs
Issue #175 Enhancement  - Set keyboard layout at beginning of EFA-Init
Issue #177 Enhancement  - Correct EFA to new clamav paths using EPEL
Issue #178 Enhancement  - EFA MailWatch Unicode Support
Issue #186 Bug          - Unbound full recursion support

EFA-Update enhanced fault tolerance
EPEL Repository is now enabled
Add 4GB Swap partition to new builds.

############################################################
EFA Version 3.0.0.7 Changes
############################################################

Issue #30  Enhancement  - Filter out nonspam in quarantine reports (regression fix)
Issue #82  Enhancement  - re2c spamassassin rule complilation support
Issue #128 Enhancement  - Adjust Treat Invalid Watermarks With No Sender as Spam
Issue #133 Enhancement  - Upgrade spamassassin to 3.4.0
Issue #136 Enhancement  - Disable Notify Senders by default in MailScanner
Issue #139 Bug          - SSLv3 POODLE Vulnerability
Issue #138 Enhancement  - Maximum Processing Attempts Database Adjustments
Issue #141 Enhancement  - Exclude Whitelisted Emails from Report as Spam Link
Issue #145 Bug          - Modify Domain TLD Constraint
Issue #147 Bug          - Message Learn/Release Rejecting 8 digit ID prefix
Issue #149 Bug          - Disable SSL in Postfix (POODLE)
Issue #151 Bug          - Fix for issue #141 for inbound whitelisted emails only
Issue #152 Bug          - Fix for Issue #136 fix
Issue #153 Bug          - Reply signature behavior not functional
Issue #154 Bug          - Fix Razor typos in build.bash
Issue #155 Bug          - GHOST Vulnerability (glibc)

############################################################
EFA Version 3.0.0.6 Changes
############################################################

Issue #127  Bug			- Greylisting not toggling on 3.0.0.5
Issue #129	Enhancement	- Increase max spam check size to 2 MB